--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="topnav" id="myTopnav">
         <router-link :to="{ name: 'home' }" class="active">Home</router-link>
         <router-link :to="{ name: 'other' }">Other</router-link>
+        <router-link :to="{ name: 'api' }">API</router-link>
         <!-- <a href="javascript:void(0);" class="icon" @click="toggleResponsiveNav">
           <i class="fa fa-bars"></i>
         </a> -->
@@ -44,6 +45,7 @@
     <!-- Load the Pages -->
     <script src="./pages/HomePage.js"></script>
     <script src="./pages/OtherPage.js"></script>
+    <script src="./pages/APIPage.js"></script>
 
     <!-- Import App -->
     <script src="./main.js"></script>
