--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/vue-router@4/dist/vue-router.global.js"></script>
     <!-- Import Chart.js to help making visual graphs -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- <script> Chart.register(Chart.ArcElement, Chart.Tooltip, Chart.Legend, Chart.Title, Chart.SubTitle); </script> -->
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Favicon -->
@@ -45,12 +46,12 @@
     <!-- Import Components -->
     <script src="./components/MeasurementCardComponent.js"></script>
     <script src="./components/LineChartComponent.js"></script>
-    <script src="./components/DoughnutChartComponent.js"></script>
+    <script src="./components/DonutChartComponent.js"></script>
     <script src="./components/MeasurementsTableComponent.js"></script>
 
     <!-- Load the Pages -->
-    <script src="./pages/TestPage.js"></script>
     <script src="./pages/HomePage.js"></script>
+    <script src="./pages/TestPage.js"></script>
     <script src="./pages/APIPage.js"></script>
 
     <!-- Import App -->
