Ændringer ift. kundens ønsker. Der er fejl et sted.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
       <div class="topnav" id="myTopnav">
         <router-link :to="{ name: 'home' }" class="active">Home</router-link>
-        <router-link :to="{ name: 'test' }">Axios Test</router-link>
-        <router-link :to="{ name: 'api' }">API Test</router-link>
+        <router-link :to="{ name: 'measurement' }">Seneste målinger</router-link>
         <!-- <a href="javascript:void(0);" class="icon" @click="toggleResponsiveNav">
           <i class="fa fa-bars"></i>
         </a> -->
@@ -51,8 +50,7 @@
 
     <!-- Load the Pages -->
     <script src="./pages/HomePage.js"></script>
-    <script src="./pages/TestPage.js"></script>
-    <script src="./pages/APIPage.js"></script>
+    <script src="./pages/MeasurementPage.js"></script>
 
     <!-- Import App -->
     <script src="./main.js"></script>
