--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- <script> Chart.register(Chart.ArcElement, Chart.Tooltip, Chart.Legend, Chart.Title, Chart.SubTitle); </script> -->
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- Favicon -->
     <link rel="icon" href="https://vuejs.org/images/logo.png" />
   </head>
@@ -24,11 +24,17 @@
     <div id="app">
 
       <div class="topnav" id="myTopnav">
-        <router-link :to="{ name: 'home' }" class="active">Home</router-link>
-        <router-link :to="{ name: 'measurement' }">Seneste målinger</router-link>
+        <label class="site-title">@ Zealand - Sjællands Erhvervsakademi</label>
+        <!-- <router-link :to="{ name: 'home' }" class="active">Home</router-link>
+        <router-link :to="{ name: 'measurement' }">Seneste målinger</router-link> -->
         <!-- <a href="javascript:void(0);" class="icon" @click="toggleResponsiveNav">
           <i class="fa fa-bars"></i>
         </a> -->
+      </div>
+
+      <div class="sidenav">
+        <router-link :to="{ name: 'home' }"> <i class="fa-solid fa-house"></i> </router-link>
+        <router-link :to="{ name: 'measurement' }"> <i class="fa-solid fa-chart-pie"></i> </router-link>
       </div>
 
       <div class="page-container">
