opdateret line chart til at virke. tlføjet score til donutten

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
       <div class="topnav" id="myTopnav">
         <label class="site-title">@ Zealand - Sjællands Erhvervsakademi</label>
-        <!-- <router-link :to="{ name: 'home' }" class="active">Home</router-link>
-        <router-link :to="{ name: 'measurement' }">Seneste målinger</router-link> -->
+        <!-- <router-link :to="{ name: 'home' }" class="active">Home</router-link> -->
         <!-- <a href="javascript:void(0);" class="icon" @click="toggleResponsiveNav">
           <i class="fa fa-bars"></i>
         </a> -->
@@ -49,7 +48,6 @@
     </div>
 
     <!-- Import Components -->
-    <script src="./components/MeasurementCardComponent.js"></script>
     <script src="./components/LineChartComponent.js"></script>
     <script src="./components/DonutChartComponent.js"></script>
     <script src="./components/MeasurementsTableComponent.js"></script>
