--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="./assets/css/stylesNavbar.css" />
     <link rel="stylesheet" href="./assets/css/stylesFooter.css" />
+    <link rel="stylesheet" href="./assets/css/stylesAPI.css" />
     <!-- Import Vue.js & Axios -->
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
