score page navn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="sidenav">
         <router-link :to="{ name: 'home' }"> <i class="fa-solid fa-house"></i> </router-link>
-        <router-link :to="{ name: 'measurement' }"> <i class="fa-solid fa-chart-pie"></i> </router-link>
+        <router-link :to="{ name: 'score' }"> <i class="fa-solid fa-chart-pie"></i> </router-link>
       </div>
 
       <div class="page-container">
@@ -55,7 +55,7 @@
 
     <!-- Load the Pages -->
     <script src="./pages/HomePage.js"></script>
-    <script src="./pages/MeasurementPage.js"></script>
+    <script src="./pages/ScorePage.js"></script>
 
     <!-- Import App -->
     <script src="./main.js"></script>
